--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
-    <head></head>
-    <body><h1>Hola!</h1></body>
+    <head>
+        <title>GitTest</title>
+    </head>
+    <body>
+        <h1>https://github.com/mridingovind/git-test.git</h1>
+    </body>
 </html>
