--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>GitTest</title>
     </head>
     <body>
+        <h2>My New Website is up and running!</h2>
         <h1>https://github.com/mridingovind/git-test.git</h1>
     </body>
 </html>
